# fq

./: .dockerignore  .gitignore  .pylintrc  .style.yapf  .travis.yml  CHANGELOG.md  COPYRIGHT.txt  Cargo.toml  Dockerfile  LICENSE.md  LICENSE.txt  Makefile  README.md  RELEASE.md  requirements.txt  setup.py  something.fq
.github/scripts/: before_deploy.sh
.github/workflows/: cd.yml  ci.yml  docker.yml
example/00_wellformed/: R1.fastq
example/01_mismatched_readnames/: R1.fastq  R2.fastq
example/02_incomplete_reads/: R1.fastq
fqlib/: __init__.py  error.py  error.pyx  fastq.pxd  fastq.py  fastq.pyx  fqread.pxd  fqread.pyx  fqreader.pxd  fqreader.pyx  fqwriter.pxd  fqwriter.pyx  string_view.pxd  timer.py  timer.pyx  utils.pxd  utils.pyx  validator.py  validators.pxd  validators.py  validators.pyx  zlib.pxd
src/: block.rs  cli.rs  collections.rs  commands.rs  distributions.rs  fastq.rs  generator.rs  lib.rs  main.rs  metrics.rs  pair_reader.rs  pair_writer.rs  reader.rs  record.rs  validators.rs  writer.rs
src/collections/: bloom_filter.rs
src/collections/bloom_filter/: bloom_filter.rs  double_hasher.rs  scalable_bloom_filter.rs
src/commands/: describe.rs  filter.rs  generate.rs  lint.rs  mod.rs  subsample.rs
src/distributions/: character.rs  quality_scores.rs
src/fastq/: fs.rs  io.rs  reader.rs  record.rs  writer.rs
src/fastq/io/: paired_writer.rs  reader.rs  split_reader.rs  writer.rs
src/generator/: builder.rs
src/metrics/: avg_quality_score_per_position.rs  max_sequence_length.rs  metric.rs  min_sequence_length.rs  record_count.rs
src/readers/: file_reader.rs  gz_reader.rs  mod.rs  paired_reader.rs
src/validators/: mod.rs  paired.rs  single.rs  validation_level.rs
src/validators/paired/: mod.rs  names.rs
src/writers/: file_writer.rs  gz_writer.rs  mod.rs  paired_writer.rs
test/fixtures/: r1-incomplete.fastq  r1.fastq  r2.fastq
tests/: test_fqlint.py
(+8 files in other folders)
