[package]
name = "fq"
version = "0.9.1"
authors = ["Michael Macias <michael.macias@stjude.org>"]
edition = "2021"
license = "MIT"
publish = false

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.31"
bbloom = { git = "https://github.com/zaeleus/bbloom.git", tag = "v0.1.0" }
bitvec = "1.0.0"
bytecount = { version = "0.6.2", features = ["runtime-dispatch-simd"] }
clap = "3.1.0"
flate2 = "1.0.14"
git-testament = "0.2.0"
rand = { version = "0.8.1", features = ["small_rng"] }
rand_distr = { version = "0.4.0" }
tracing = "0.1.25"
tracing-subscriber = "0.3.0"
