[package]
name = "fq"
version = "0.12.0"
authors = ["Michael Macias <michael.macias@stjude.org>"]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
publish = false

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.31"
bit-vec = "0.8.0"
bitvec = "1.0.0"
bytecount = { version = "0.6.2", features = ["runtime-dispatch-simd"] }
bytes = "1.11.1"
clap = { version = "4.5.8", features = ["derive", "string"] }
flate2 = { version = "1.0.35", default-features = false, features = ["zlib-rs"] }
git-testament = "0.2.0"
memchr = "2.7.6"
rand = "0.9.0"
rapidhash = "4.1.1"
regex = "1.7.1"
thiserror = "2.0.0"
tracing = "0.1.25"
tracing-subscriber = "0.3.0"
